[package]
name = "wrkwrk"
version = "0.2.0"
edition = "2021"

# panic setting
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
# libc
libc = "0.2.138"
# lazy
once_cell      = "1.16.0"
async-oncecell = "0.2.0"

# httpclient
[dependencies.reqwest]
version = "0.11.13"
features = ["default", "rustls-tls", "native-tls-alpn"]

[dependencies.serde]
version = "1.0.148"
features = ["derive"]

[dependencies.mlua]
version = "0.8.6"
features = ["luajit", "serialize", "send", "vendored", "async", "macros"]

[dependencies.clap]
version = "4.0.8"
features = ["derive"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]
